# duppelgAndrey

./: chat_with_dariaamurrr.json  pyproject.toml
duppelgandrey/: main.py  settings.py
duppelgandrey/scripts/: get_tg_session.py
duppelgandrey/services/: tg_exporter.py
