[tool.poetry]
name = "duppelgandrey"
version = "0.1.0"
description = ""
authors = ["GogaCpp <assdddffff54@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
telethon = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
